# minecast

./: ARCHITECTURE.md  package.json  vite.config.ts
.github/workflows/: build.yml
Minecast/: BUILD_GUIDE.md  generate_icons.py  index.html
Minecast/src-tauri/: Cargo.toml
Minecast/src-tauri/src/: database.rs  export.rs  main.rs  weather.rs
Minecast/src/components/charts/: WeatherChart.module.css  WeatherChart.tsx
Minecast/src/components/pages/: HomePage.module.css  HomePage.tsx  SettingsPage.tsx
Minecast/src/components/ui/: ToastContainer.tsx
Minecast/src/services/: api.ts
Minecast/src/types/: index.ts
src/: App.tsx  index.css
src-tauri/: tauri.conf.json
src/components/layout/: Sidebar.module.css  Sidebar.tsx  TitleBar.module.css  TitleBar.tsx
src/components/pages/: HistoryPage.module.css  HistoryPage.tsx  MonitoringPage.module.css  MonitoringPage.tsx  SettingsPage.module.css  StatisticsPage.module.css  StatisticsPage.tsx
src/components/ui/: ToastContainer.module.css
src/store/: appStore.ts
