[package]
name = "minecast"
version = "1.0.0"
description = "MineCast - Monitoring Cuaca Operasional Pertambangan Batu Bara"
authors = ["MineCast Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "path-all",
  "fs-all",
  "http-all",
  "notification-all",
  "dialog-all"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
uuid = { version = "1.7", features = ["v4"] }
zip = "0.6"
xlsxwriter = "0.6"
once_cell = "1.19"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
